# swiss-commute-housing

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile.txt  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_local.bat
.github/workflows/: ci.yml  tests.yml
app/: app.py
app/data/: gemeinden_simplified.geojson  meta.json  tt_by_origin.csv  tt_by_origin.parquet
data/: vacancy_municipality.csv
data/gtfs_unzipped/: agency.txt  calendar.txt  feed_info.txt  stops.txt  transfers.txt
notebooks/: swiss_commute_housing.ipynb
scripts/: launch_app.py  make_artifacts.py
src/sch/: geo_utils.py  gtfs_graph.py  io_utils.py  scoring.py
src/sch.egg-info/: PKG-INFO  SOURCES.txt
src/swiss_commute_housing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_imports.py  test_scoring.py
