[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sch"
version = "0.1.0"
description = "Swiss Commute & Housing Explorer"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sch"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
