[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sch"
version = "0.1.0"
description = "Swiss Commute & Housing Explorer"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sch"]

[tool.black]
line-length = 100
target-version = ["py311"]
# Exclude notebooks and data artifacts from formatting checks
extend-exclude = '''
(
  ^notebooks/
| ^app/data/
| ^data/
)
'''

[tool.isort]
profile = "black"
line_length = 100
# Keep isort from touching notebooks/data artifacts
skip_glob = [
  "notebooks/**",
  "app/data/**",
  "data/**"
]
